# pulp-nnx

./: .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: build-and-push-docker-image.yml  cache-gnu-toolchain.yml  cache-gvsoc.yml  cache-pulp-sdk.yml  gitlab-ci-action.yml  lint.yml  test-ne16.yml  test-neureka.yml  test-neureka_v2.yml
inc/: pulp_nnx.h  pulp_nnx_ne16.h  pulp_nnx_neureka.h  pulp_nnx_neureka_v2.h
ne16/: README.md
ne16/bsp/: ne16_pulp_bsp.c  ne16_pulp_bsp.h
ne16/gvsoc/: ne16_gvsoc.h  ne16_gvsoc_logging.h
ne16/hal/: CMakeLists.txt  ne16.c  ne16.h  ne16_defs.h  ne16_hal.c  ne16_hal.h  ne16_task.c  ne16_task.h  ne16_task_defs.h
neureka/: README.md
neureka/bsp/: neureka_bsp.h  neureka_siracusa_bsp.c  neureka_siracusa_bsp.h
neureka/bsp/astral/: neureka_astral_bsp.c  neureka_astral_bsp.h
neureka/bsp/pulp_cluster/: neureka_pulp_cluster_bsp.c  neureka_pulp_cluster_bsp.h
neureka/bsp/testbench/: neureka_testbench_bsp.c  neureka_testbench_bsp.h
neureka/gvsoc/: neureka_gvsoc.h
neureka/hal/: CMakeLists.txt  neureka.c  neureka.h  neureka_task.c  neureka_task.h  neureka_task_defs.h
neureka/inc/: pulp_nnx_defs.h  pulp_nnx_error_codes.h  pulp_nnx_hal.h  pulp_nnx_util.h
neureka/src/: pulp_nnx_hal.c  pulp_nnx_util.c
neureka_v2/: README.md
neureka_v2/bsp/: neureka_v2_siracusa_bsp.c  neureka_v2_siracusa_bsp.h
neureka_v2/gvsoc/: neureka_v2_gvsoc.h
neureka_v2/hal/: CMakeLists.txt  neureka_v2.c  neureka_v2.h  neureka_v2_task.c  neureka_v2_task.h  neureka_v2_task_defs.h
src/: pulp_nnx_ne16.c  pulp_nnx_neureka.c  pulp_nnx_neureka_v2.c
test/: .gitignore  .isort.cfg  Dockerfile  HeaderWriter.py  Ne16.py  Ne16MemoryLayout.py  Ne16TestClasses.py  Ne16TestConf.py  Ne16Weight.py  NeuralEngineFunctionalModel.py  Neureka.py  NeurekaMemoryLayout.py  NeurekaMemoryLayoutSiracusa.py  NeurekaTestConf.py  NeurekaV2TestConf.py  NeurekaV2Weight.py  NeurekaWeight.py  NnxBuildFlow.py  NnxMapping.py  NnxTestClasses.py  README.md  TestClasses.py  _docker_install_micromamba.sh  _docker_pulp_riscv_gnu_toolchain.sh  _docker_pulp_sdk.sh  conf.toml  conftest.py  requirements-conda.txt  requirements-dev.txt  requirements-pip.txt  requirements.txt  test.py  testgen.py
test/app/: CMakeLists.txt  Makefile  README.md
test/app/cmake/: pulp-sdk-base.cmake  pulp-sdk-siracusa.cmake  toolchain_gnu.cmake  toolchain_llvm.cmake
test/app/inc/: layer_util.h  nnx_layer.h
test/app/src/: main.c  nnx_layer.c
test/apps/: README.md
test/apps/pulp-nnx/: CMakeLists.txt  Makefile
test/apps/pulp-nnx-hal/: CMakeLists.txt
test/apps/pulp-nnx-hal/cmake/: toolchain_llvm.cmake
test/apps/pulp-nnx-hal/src/: nnx_layer.c
test/docker/: build_riscv_gnu_toolchain.sh  clone_and_build_gvsoc.sh  clone_riscv_gnu_toolchain.sh  requirements-pulp-sdk.txt  requirements-run-gvsoc.txt  requirements-run-pulp-sdk.txt
test/tests/test_0/: bias.pt  conf.json  input.pt  output.pt  scale.pt  weight.pt
test/tests/test_1/: bias.pt  conf.json  input.pt  output.pt  scale.pt  weight.pt
test/tests/test_10/: conf.json  global_shift.pt  input.pt  output.pt  scale.pt  weight.pt
test/tests/test_100/: conf.json
test/tests/test_101/: conf.json
test/tests/test_102/: conf.json
test/tests/test_103/: conf.json
test/tests/test_104/: conf.json
test/tests/test_105/: conf.json
test/tests/test_106/: conf.json
test/tests/test_107/: conf.json
test/tests/test_108/: conf.json
test/tests/test_109/: conf.json
test/tests/test_11/: bias.pt  conf.json  input.pt  output.pt  scale.pt  weight.pt
test/tests/test_110/: conf.json
test/tests/test_111/: conf.json
test/tests/test_112/: conf.json
test/tests/test_113/: conf.json
test/tests/test_114/: conf.json
test/tests/test_115/: conf.json
test/tests/test_116/: conf.json
test/tests/test_117/: conf.json
test/tests/test_118/: conf.json
test/tests/test_119/: conf.json
test/tests/test_12/: bias.pt  conf.json  input.pt  output.pt  scale.pt  weight.pt
test/tests/test_120/: conf.json
test/tests/test_121/: conf.json
test/tests/test_122/: conf.json
test/tests/test_123/: conf.json
test/tests/test_124/: conf.json
test/tests/test_125/: conf.json
test/tests/test_126/: conf.json
test/tests/test_127/: conf.json
test/tests/test_128/: conf.json
test/tests/test_129/: conf.json
test/tests/test_13/: bias.pt  conf.json  input.pt  output.pt  scale.pt  weight.pt
test/tests/test_130/: conf.json
test/tests/test_131/: conf.json
test/tests/test_132/: conf.json
test/tests/test_133/: conf.json
test/tests/test_134/: conf.json
test/tests/test_135/: conf.json
test/tests/test_136/: conf.json
test/tests/test_137/: conf.json
test/tests/test_138/: conf.json
test/tests/test_139/: conf.json
test/tests/test_14/: conf.json  input.pt  output.pt  scale.pt  weight.pt
test/tests/test_140/: conf.json
test/tests/test_141/: conf.json
test/tests/test_15/: bias.pt  conf.json  input.pt  output.pt  scale.pt  weight.pt
test/tests/test_16/: bias.pt  conf.json  input.pt  output.pt  scale.pt  weight.pt
test/tests/test_17/: bias.pt  conf.json  input.pt  output.pt  scale.pt  weight.pt
test/tests/test_18/: bias.pt  conf.json  input.pt  output.pt  scale.pt  weight.pt
test/tests/test_19/: bias.pt  conf.json  input.pt  output.pt  scale.pt  weight.pt
test/tests/test_2/: conf.json  input.pt  output.pt  scale.pt  weight.pt
test/tests/test_20/: bias.pt  conf.json  input.pt  output.pt  scale.pt  weight.pt
test/tests/test_21/: conf.json  global_shift.pt  input.pt  output.pt  scale.pt  weight.pt
test/tests/test_22/: bias.pt  conf.json  input.pt  output.pt  scale.pt  weight.pt
test/tests/test_23/: bias.pt  conf.json  input.pt  output.pt  scale.pt  weight.pt
test/tests/test_24/: conf.json  input.pt  output.pt  scale.pt  weight.pt
test/tests/test_25/: conf.json  global_shift.pt  input.pt  output.pt  scale.pt  weight.pt
test/tests/test_26/: bias.pt  conf.json  input.pt  output.pt  scale.pt  (+1 more)
test/workflow-requirements/: requirements-run-gvsoc.txt
util/: CMakeLists.txt  hwpe.c  hwpe.h  pulp_nnx_util.c  pulp_nnx_util.h
(+451 files in other folders)
